[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[project]
name = "llmflow-core"
version = "0.0.1"
description = "Deterministic LLM workflow engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ibrahim" }]
keywords = ["llm", "workflow", "deterministic", "pipelines"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/ibrahim1023/llmflow-core"
Repository = "https://github.com/ibrahim1023/llmflow-core"
Issues = "https://github.com/ibrahim1023/llmflow-core/issues"

# Runtime dependencies
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "jsonschema>=4.0",
  "jinja2>=3.1",
  "typer>=0.9",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=5.0",
  "build>=1.2.2",
  "twine>=5.1.1",
]

[project.scripts]
llmflow = "llmflow.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llmflow"]

[tool.hatch.build.targets.sdist]
include = [
  "src/llmflow",
  "README.md",
  "pyproject.toml",
  "requirements.txt",
  "scope.md",
  "task.md",
  "info.md",
  "context.md",
  "examples",
  "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
